gen/hsa-include/hsa/hsa_ext_amd.h


hsa_status_t HSA_API
    hsa_amd_async_function(void (*callback)(void* arg), void* arg);
typedef struct hsa_amd_memory_pool_s {
  uint64_t handle;
} hsa_amd_memory_pool_t;
hsa_status_t HSA_API hsa_amd_agent_iterate_memory_pools(
    hsa_agent_t agent,
    hsa_status_t (*callback)(hsa_amd_memory_pool_t memory_pool, void* data),
    void* data);